fixed position of Try Again button in CSS. Game is now fully functional but I still have time so I may add some more stretch goals

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,8 +53,9 @@ button {
     font-family: 'Righteous', cursive;
 }
 
-#resetBtn {
+.reset {
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    padding-top: 15px;
 }
